@@ -275,6 +275,11 @@ UpdateInputState (void)
 
 	if (CurrentInputState.menu[KEY_EXIT])
 		ExitRequested = TRUE;
+
+#if defined(DEBUG) || defined(USE_DEBUG_KEY)
+	if (PulsedInputState.menu[KEY_DEBUG])
+		debugKeyPressedSynchronous ();
+#endif
 }
 
 InputFrameCallback *
@@ -364,19 +369,6 @@ DoInput (void *pInputState, BOOLEAN resetInput)
 		TaskSwitch ();
 
 		UpdateInputState ();
-
-#ifdef DEBUG
-		if (doInputDebugHook != NULL)
-		{
-			void (*saveDebugHook) (void);
-			saveDebugHook = doInputDebugHook;
-			doInputDebugHook = NULL;
-					// No further debugHook calls unless the called
-					// function resets doInputDebugHook.
-			(*saveDebugHook) ();
-			continue;
-		}
-#endif
 
 #if DEMO_MODE || CREATE_JOURNAL
 		if (ArrowInput != DemoInput)
